ajout style sur lien hypertexte

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <nav>
 
                     <ul>
-                        <li><a href="#">Hébergements</a></li>
-                        <li><a href="#">Activités</a></li>
-                        <li><a href="#">S'inscrire</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Hébergements</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Activités</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">S'inscrire</a></li>
                     </ul>
 
                 </nav>
@@ -96,7 +96,7 @@
                     </article>
 
                 </div>
-                <a href="#">Afficher plus</a>
+                <a href="#" style="text-decoration :none; color: black;">Afficher plus</a>
 
             </div>
 
@@ -127,33 +127,33 @@
         </div>
     </section>
     <footer>
-
-        <nav>
-            <div id="conteneur3">
-                <article class="fin">
+        <div id="footer">
+            <nav>
+                <div class="fin">
                     <h3>A propos</h3>
                     <ul>
-                        <li><a href="#">Fonctionnement du site</a></li>
-                        <li><a href="#">Conditions générales de vente</a></li>
-                        <li><a href="#">Données et confidentialité</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Fonctionnement du site</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Conditions générales de vente</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Données et confidentialité</a></li>
                     </ul>
-                </article>
-                <article class="fin">
+                </div>
+                <div class="fin">
                     <h3>Nos hébergements</h3>
                     <ul>
-                        <li><a href="#">Charte qualité</a></li>
-                        <li><a href="#">Soumettre votre hôtel</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Charte qualité</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Soumettre votre hôtel</a></li>
                     </ul>
-                </article>
-                <article class="fin">
+                </div>
+                <div class="fin">
                     <h3>Assistance</h3>
                     <ul>
-                        <li><a href="#">Centre d'aide</a></li>
-                        <li><a href="#">Nous contacter</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Centre d'aide</a></li>
+                        <li><a href="#" style="text-decoration :none; color: black;">Nous contacter</a></li>
                     </ul>
-                </article>
-            </div>
-        </nav>
+                </div>
+
+            </nav>
+        </div>
 
 
 
