icon étoile dans les articles  + taille texte articles

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     <article class="hotel">
 
                         <a href="#"><img width="180" height="100" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hotel1"></a>
-                        <h3>Hôtel de la Cannebiere</h3>
+                        <h3>Auberge de la Cannebiere</h3>
                         <p>Nuit à partir de 25€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color:#0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color:#F2F2F2;"></i>
                     </article>
 
                     <article class="hotel">
@@ -68,12 +69,16 @@
                         <a href="#"><img width="180" height="100" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel2"></a>
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de 52€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color: #0065FC;"></i>
                     </article>
 
                     <article class="hotel">
                         <a href="#"><img width="180" height="100" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel3"></a><br>
                         <h3>Hôtel les mouettes</h3>
                         <p>Nuit à partir de 76€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color:#F2F2F2;"></i>
 
                     </article>
 
@@ -82,6 +87,7 @@
                         <a href="#"><img width="180" height="100" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel4"></a>
                         <h3>Hôtel de la mer</h3>
                         <P>Nuit à partir de 48€</P>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color:#F2F2F2;"></i><i class="fas fa-star" style="color:#F2F2F2;"></i>
 
                     </article>
 
@@ -89,16 +95,20 @@
                         <a href="#"><img width="180" height="100" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hotel5"></a>
                         <h3>Auberge le panier</h3>
                         <p>Nuit à partir de 23€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color:#F2F2F2;"></i>
                     </article>
 
                     <article class="hotel">
                         <a href="#"><img width="180" height="100" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" atl="hotel6"></a><br>
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de 95€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color: #0065FC;"></i>
                     </article>
 
                 </div>
-                <a href="#" style="text-decoration :none; color: black;">Afficher plus</a>
+                <a href="#" style="text-decoration :none; color: black;"><strong>Afficher plus</strong></a>
 
             </div>
 
@@ -110,18 +120,24 @@
                         <a href="#"><img width="130" height="100" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" atl="hotel7"></a>
                         <h3>Hôtel le soleil du matin</h3>
                         <p>Nuit à partir de 128€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color: #0065FC;"></i>
                     </article>
 
                     <article class="hotel1">
                         <a href="#"><img width="130" height="100" class="imageflottante" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel8"></a>
                         <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                         <p>Nuit à partir de 71€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color:#F2F2F2;"></i>
                     </article>
 
                     <article class="hotel1">
                         <a href="#"><img img width="130" height="100" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
                         <h3>Hôtel tout bleu et Blanc</h3>
                         <p>Nuit à partir de 68€</p>
+                        <i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star" style="color: #0065FC;"></i><i class="fas fa-star"
+                            style="color:#F2F2F2;"></i>
                     </article>
                 </div>
             </div>
