changement marge afficher plus + taiile p

--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
                     </article>
 
                 </div>
-                <a href="#" style="text-decoration :none; color: black;"><strong>Afficher plus</strong></a>
-
+                <div class="afficher">
+                    <a href="#" style="text-decoration :none; color: black;"><strong>Afficher plus</strong></a>
+                </div>
             </div>
 
             <div class="populaires">
@@ -119,7 +120,7 @@
                 <div id="conteneur2">
                     <article class="hotel1">
 
-                        <a href="#"><img width="130" height="100" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" atl="hotel7"></a>
+                        <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" atl="hotel7"></a>
                         <h3>Hôtel le soleil du matin</h3>
                         <p>Nuit à partir de 128€</p>
                         <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
@@ -127,7 +128,7 @@
                     </article>
 
                     <article class="hotel1">
-                        <a href="#"><img width="130" height="100" class="imageflottante" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel8"></a>
+                        <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel8"></a>
                         <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                         <p>Nuit à partir de 71€</p>
                         <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
@@ -135,7 +136,7 @@
                     </article>
 
                     <article class="hotel1">
-                        <a href="#"><img img width="130" height="100" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
+                        <a href="#"><img img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
                         <h3>Hôtel tout bleu et Blanc</h3>
                         <p>Nuit à partir de 68€</p>
                         <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
