redimension du logo

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
                 <nav>
 
                     <ul>
-                        <li><a href="#" style="text-decoration :none; color: black;">Hébergements</a></li>
+                        <li><a href="#conteneurs" style="text-decoration :none; color: black;">Hébergements</a></li>
                         <li><a href="#" style="text-decoration :none; color: black;">Activités</a></li>
                         <li><a href="#" style="text-decoration :none; color: black;">S'inscrire</a></li>
                     </ul>
 
                 </nav>
             </div>
-            <img width="80" height="50" src="images/logo/Reservia@3x.png" alt="logo_reservia" />
+            <div id="reservia">
+                <img width="50" height="30" src="images/logo/Reservia@3x.png" alt="logo_reservia" />
+            </div>
+
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En pleins centre ville ou en pleine nature</p>
 
@@ -47,6 +50,11 @@
 
 
     </nav>
+
+
+    <i class="fal fa-info-circle" style="color: #0065FC;"></i>
+    <p>Plus de 500 logements sont disponibles dans cette ville </p>
+
 
     <section>
 
