--- a/index.html
+++ b/index.html
@@ -38,22 +38,36 @@
     </div>
 
     </header>
+    <div class="recherche">
+        <nav>
+            <i class="fas fa-map-marker-alt" style="background-color: #F2F2F2;"></i>
+            <label for="site-search"></label>
+            <input type="text" id="site-search" name="q" aria-label="Search through site content">
+            <button>Recherche</button>
 
+
+        </nav>
+
+    </div>
     <nav>
-        <h3>Filtres</h3>
+        <div id="choix">
+            <div class="filtre">
+                <h3>Filtres</h3>
 
-
-
-        <label for="site-search" </label>
-        <input type="text" id="site-search" name="q" aria-label="Search through site content">
-        <button>Recherche</button>
-
-
+                <ul>
+                    <li class="filter" type="text"><i class="fas fa-money-bill-wave"></i>Economique</li>
+                    <li class="filter" type="text"><i class="fas fa-child"></i>Familiale</li>
+                    <li class="filter" type="text"><i class="fas fa-heart"></i>Romantique</li>
+                    <li class="filter" type="text"><i class="fas fa-dog"></i>Animaux autorisés</li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
-
-    <i class="fal fa-info-circle" style="color: #0065FC;"></i>
-    <p>Plus de 500 logements sont disponibles dans cette ville </p>
+    <div class="infos">
+        <i class="fal fa-info-circle" style="color: #0065FC;"></i>
+        <p>Plus de 500 logements sont disponibles dans cette ville </p>
+    </div>
 
 
     <section>
