--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </article>
 
                     <article class="hotel1">
-                        <a href="#"><img img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
+                        <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
                         <h3>Hôtel tout bleu et Blanc</h3>
                         <p>Nuit à partir de 68€</p>
                         <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
@@ -168,6 +168,43 @@
             </div>
 
         </div>
+
+    </section>
+
+    <section>
+        <div id="block">
+            <div class="Diverstisements">
+                <h2>Activités à Marseille</h2>
+
+                <article class="Activités">
+                    <a href="#"><img width="200" height="300" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="activité1"></a>
+                    <h3>Vieux Port</h3>
+                </article>
+
+                <article class="Activités">
+                    <a href="#"><img width="200" height="150" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="activité2"></a>
+                    <h3>Fort de Pomègues</h3>
+                </article>
+
+                <article class="Activités">
+                    <a href="#"><img width="200" height="100" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="activité3"></a>
+                    <h3>Iles du Frioul</h3>
+                </article>
+
+                <article class="Activités">
+                    <a href="#"><img width="200" height="300" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="activité4"></a>
+                    <h3>Parc National des Calanques</h3>
+                </article>
+
+                <article class="Activités">
+                    <a href="#"><img width="200" height="100" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="activité5"></a>
+                    <h3>Notre-Dame-de-la-Garde</h3>
+                </article>
+
+                <article class="Activités">
+                    <a href="#"><img width="200" height="150" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="activité6"></a>
+                    <h3>Parc Longchamp</h3>
+                </article>
     </section>
     <footer>
 
