--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2? family = Raleway & display = swap" rel="feuille de style " />
     <link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 
@@ -59,10 +57,10 @@
                     <h3>Filtres</h3>
 
                     <ul>
-                        <li class="filter" type="text"><i class="fas fa-money-bill-wave"></i>Economique</li>
-                        <li class="filter" type="text"><i class="fas fa-child"></i>Familiale</li>
-                        <li class="filter" type="text"><i class="fas fa-heart"></i>Romantique</li>
-                        <li class="filter" type="text"><i class="fas fa-dog"></i>Animaux autorisés</li>
+                        <li class="filter"><i class="fas fa-money-bill-wave"></i>Economique</li>
+                        <li class="filter"><i class="fas fa-child"></i>Familiale</li>
+                        <li class="filter"><i class="fas fa-heart"></i>Romantique</li>
+                        <li class="filter"><i class="fas fa-dog"></i>Animaux autorisés</li>
                     </ul>
                 </div>
             </div>
@@ -146,7 +144,7 @@
                     <div id="conteneur2">
                         <article class="hotel1">
 
-                            <a href="#"><img width="80" height="110" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" atl="hotel7"></a>
+                            <a href="#"><img width="80" height="110" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel7"></a>
                             <h3>Hôtel le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
                             <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
