--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -39,7 +39,7 @@
 
 
 
-        </div>
+
 
     </header>
     <div class="recherche">
