--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </nav>
 
         <div class="infos">
-            <i class="fal fa-info-circle" style="color: #0065FC;"></i>
+            <i class="fas fa-info-circle" style="color: #0065FC;"></i>
             <p>Plus de 500 logements sont disponibles dans cette ville </p>
         </div>
 
@@ -87,8 +87,10 @@
                             <a href="#"><img width="180" height="100" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hotel1"></a>
                             <h3>Auberge de la Cannebiere</h3>
                             <p>Nuit à partir de 25€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            <div class="star">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            </div>
                         </article>
 
                         <article class="hotel">
@@ -96,16 +98,20 @@
                             <a href="#"><img width="180" height="100" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel2"></a>
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                            <div class="star">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                            </div>
                         </article>
 
                         <article class="hotel">
                             <a href="#"><img width="180" height="100" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel3"></a><br>
                             <h3>Hôtel les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            <div class="star">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            </div>
 
                         </article>
 
@@ -114,8 +120,10 @@
                             <a href="#"><img width="180" height="100" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel4"></a>
                             <h3>Hôtel de la mer</h3>
                             <P>Nuit à partir de 48€</P>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            <div class="star">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                                <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            </div>
 
                         </article>
 
@@ -123,16 +131,20 @@
                             <a href="#"><img width="180" height="100" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hotel5"></a>
                             <h3>Auberge le panier</h3>
                             <p>Nuit à partir de 23€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            <div class="star">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            </div>
                         </article>
 
                         <article class="hotel">
                             <a href="#"><img width="180" height="100" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel6"></a><br>
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 95€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                            <div class="star">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                            </div>
                         </article>
 
                     </div>
@@ -149,24 +161,30 @@
                             <a href="#"><img width="80" height="110" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel7"></a>
                             <h3>Hôtel le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                            <div class="star2">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                            </div>
                         </article>
 
                         <article class="hotel1">
                             <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel8"></a>
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            <div class="star2">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            </div>
                         </article>
 
                         <article class="hotel1">
                             <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
                             <h3>Hôtel tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            <div class="star2">
+                                <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                                <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                            </div>
                         </article>
                     </div>
                 </div>
