button search css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         </header>
         <div class="recherche">
             <nav>
-                <i class="fas fa-map-marker-alt" style="background-color: #F2F2F2;"></i>
+
+                <i class="fas fa-map-marker-alt"></i>
                 <label for="site-search"></label>
                 <input type="text" id="site-search" name="q" aria-label="Search through site content">
                 <button>Recherche</button>
@@ -69,8 +70,8 @@
         </nav>
 
         <div class="infos">
-            <i class="fas fa-info-circle" style="color: #0065FC;"></i>
-            <p>Plus de 500 logements sont disponibles dans cette ville </p>
+            <i class="fas fa-info-circle" style="color:#0065FC;"></i> Plus de 500 logements sont disponibles dans cette ville
+
         </div>
 
 
