--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
                     <h3>Filtres</h3>
 
                     <ul>
-                        <li class="filter"><i class="fas fa-money-bill-wave"></i>Economique</li>
-                        <li class="filter"><i class="fas fa-child"></i>Familiale</li>
-                        <li class="filter"><i class="fas fa-heart"></i>Romantique</li>
-                        <li class="filter"><i class="fas fa-dog"></i>Animaux autorisés</li>
+
+                        <li class="filter"><i class="fas fa-money-bill-wave"></i><strong>Economiques</strong></li>
+                        <li class="filter"><i class="fas fa-child"></i><strong>Familiale</strong></li>
+                        <li class="filter"><i class="fas fa-heart"></i><strong>Romantique</strong></li>
+                        <li class="filter"><i class="fas fa-dog"></i><strong>Animaux autorisés</strong></li>
                     </ul>
                 </div>
             </div>
