--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <nav>
 
                     <ul>
-                        <li><a href="#conteneurs" style="text-decoration :none; color: black;">Hébergements</a></li>
-                        <li><a href="#" style="text-decoration :none; color: black;">Activités</a></li>
-                        <li><a href="#" style="text-decoration :none; color: black;">S'inscrire</a></li>
+                        <li><a href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
+                        <li><a href="#block" style="text-decoration: underline transparent;">Activités</a></li>
+                        <li><a href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
                     </ul>
 
                 </nav>
@@ -36,10 +36,6 @@
 
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En pleins centre ville ou en pleine nature</p>
-
-
-
-
 
         </header>
         <div class="recherche">
