--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
 
                     <ul>
-                        <li><a href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
+                        <li><a class="border" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
                         <li><a href="#block" style="text-decoration: underline transparent;">Activités</a></li>
                         <li><a href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
                     </ul>
