--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
         </div>
 
         <header>
-            <div class="menu">
-                <nav>
+            <div id="containerhead">
+                <div class="menu">
+                    <nav>
 
-                    <ul>
-                        <li><a class="border" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
-                        <li><a href="#block" style="text-decoration: underline transparent;">Activités</a></li>
-                        <li><a href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
-                    </ul>
+                        <ul>
+                            <li><a class="border" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
+                            <li><a href="#block" style="text-decoration: underline transparent;">Activités</a></li>
+                            <li><a href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
+                        </ul>
 
-                </nav>
+                    </nav>
+                </div>
+
+                <img src="images/logo/Reservia@3x.png" alt="logo_reservia" />
+
             </div>
-            <div id="reservia">
-                <img width="50" height="30" src="images/logo/Reservia@3x.png" alt="logo_reservia" />
-            </div>
-
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En pleins centre ville ou en pleine nature</p>
 
