--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
 
                 <div class="populaires">
-                    <h2>Les plus populaires</h2>
+                    <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
                     <div id="conteneur2">
                         <article class="hotel1">
 
