--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div id="conteneur1">
                         <article class="hotel">
 
-                            <a href="#"><img width="180" height="100" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hotel1"></a>
+                            <a href="#"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hotel1"></a>
                             <h3>Auberge de la Cannebiere</h3>
                             <p>Nuit à partir de 25€</p>
                             <div class="star">
@@ -95,7 +95,7 @@
 
                         <article class="hotel">
 
-                            <a href="#"><img width="180" height="100" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel2"></a>
+                            <a href="#"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel2"></a>
                             <h3>Hôtel du port</h3>
                             <p>Nuit à partir de 52€</p>
                             <div class="star">
@@ -105,7 +105,7 @@
                         </article>
 
                         <article class="hotel">
-                            <a href="#"><img width="180" height="100" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel3"></a><br>
+                            <a href="#"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel3"></a><br>
                             <h3>Hôtel les mouettes</h3>
                             <p>Nuit à partir de 76€</p>
                             <div class="star">
@@ -117,7 +117,7 @@
 
 
                         <article class="hotel">
-                            <a href="#"><img width="180" height="100" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel4"></a>
+                            <a href="#"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel4"></a>
                             <h3>Hôtel de la mer</h3>
                             <P>Nuit à partir de 48€</P>
                             <div class="star">
@@ -128,7 +128,7 @@
                         </article>
 
                         <article class="hotel">
-                            <a href="#"><img width="180" height="100" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hotel5"></a>
+                            <a href="#"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hotel5"></a>
                             <h3>Auberge le panier</h3>
                             <p>Nuit à partir de 23€</p>
                             <div class="star">
@@ -138,7 +138,7 @@
                         </article>
 
                         <article class="hotel">
-                            <a href="#"><img width="180" height="100" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel6"></a><br>
+                            <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel6"></a><br>
                             <h3>Hôtel chez Amina</h3>
                             <p>Nuit à partir de 95€</p>
                             <div class="star">
