--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                     </div>
                     <div class="afficher">
-                        <a href="#" style="text-decoration :none; color: black;"><strong>Afficher plus</strong></a>
+                        <a href="#" style="text-decoration :none; color: black;">Afficher plus</a>
                     </div>
                 </div>
 
