--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <label for="site-search"></label>
                 <input type="text" id="site-search" name="q" aria-label="Search through site content">
-                <button>Recherche</button>
+                <button>Recherche</button><i class="fas fa-search"></i>
 
 
             </nav>
@@ -59,10 +59,12 @@
 
                     <ul>
                         <h3>Filtres</h3>
+
                         <li class="filter"><i class="fas fa-money-bill-wave"></i><strong>Economiques</strong></li>
                         <li class="filter"><i class="fas fa-child"></i><strong>Familiale</strong></li>
                         <li class="filter"><i class="fas fa-heart"></i><strong>Romantique</strong></li>
                         <li class="filter"><i class="fas fa-dog"></i><strong>Animaux autorisés</strong></li>
+
                     </ul>
                 </div>
             </div>
