--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <i class="fas fa-map-marker-alt"></i>
                 <label for="site-search"></label>
                 <input type="text" id="site-search" name="q" aria-label="Search through site content">
-                <button>Recherche</button><i class="fas fa-search"></i>
+                <button>Recherche</button><i class="fas fa-search fa-xs" style="color:white"></i>
 
 
             </nav>
