--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <h3>Filtres</h3>
 
                         <li class="filter"><i class="fas fa-money-bill-wave"></i><strong>Economiques</strong></li>
-                        <li class="filter"><i class="fas fa-child"></i><strong>Familiale</strong></li>
+                        <li class="filter"><i class="fas fa-child"></i><strong>Familial</strong></li>
                         <li class="filter"><i class="fas fa-heart"></i><strong>Romantique</strong></li>
                         <li class="filter"><i class="fas fa-dog"></i><strong>Animaux autorisés</strong></li>
 
