--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                     <nav>
 
                         <ul>
+
                             <li><a class="border" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
-                            <li><a href="#block" style="text-decoration: underline transparent;">Activités</a></li>
-                            <li><a href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
+                            <li><a class="border" href="#block" style="text-decoration: underline transparent;">Activités</a></li>
+                            <li><a class="border1" href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
                         </ul>
 
                     </nav>
