--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
                 <ul>
 
-                    <li><a href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
-                    <li><a href="#block" style="text-decoration: underline transparent;">Activités</a></li>
-                    <li><a href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
+                    <li><a class="home" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
+                    <li><a class="home1" href="#block" style="text-decoration: underline transparent;">Activités</a></li>
+                    <li><a class="register" href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
                 </ul>
 
             </nav>
