--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <div class="filtre">
 
                 <ul>
-                    <h3>Filtres</h3>
+                    <h3>Filtres</h3><br>
 
-                    <li class="filter"><i class="fas fa-money-bill-wave"></i><strong>Economiques</strong></li>
+                    <li class="filter" class="order1"><i class="fas fa-money-bill-wave"></i><strong>Economiques</strong></li>
                     <li class="filter"><i class="fas fa-child"></i><strong>Familial</strong></li>
                     <li class="filter"><i class="fas fa-heart"></i><strong>Romantique</strong></li>
                     <li class="filter"><i class="fas fa-dog"></i><strong>Animaux autorisés</strong></li>
