--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     <header>
         <div id="containerhead">
 
-            <nav>
+            <nav class="menu">
 
-                <ul>
 
-                    <li><a class="home" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a></li>
-                    <li><a class="home1" href="#block" style="text-decoration: underline transparent;">Activités</a></li>
-                    <li><a class="register" href="#" style="text-decoration: underline transparent; ">S'inscrire</a></li>
-                </ul>
+
+                <a class="menu1" href="#conteneurs" style="text-decoration: underline transparent;">Hébergements</a>
+                <a class="menu2" href="#block" style="text-decoration: underline transparent;">Activités</a>
+                <a class="menu3" href="#" style="text-decoration: underline transparent; ">S'inscrire</a>
+
 
             </nav>
 
 
-            <img src="images/logo/Reservia@3x.png" alt="logo_reservia" />
+            <img src="images/logo/Reservia@3x.png" alt="logo_reservia" class="imageflottante1" />
 
         </div>
         <h1>Trouver votre hébergement pour des vacances de rêve</h1>
